# libadawata

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md
adwt/: CMakeLists.txt  adwt.cpp  adwt.hpp  crossfading.hpp  direction.hpp  filter_type.hpp  maths.hpp  span.hpp  waveform_data.cpp  waveform_data.hpp  wavetable_data.cpp  wavetable_data.hpp
cmake/: CMakeLists.txt  Catch2.cmake  Gbenchmark.cmake  Tracy.cmake  argparse.cmake  gsl.cmake  itertools.cmake  sndfile.cmake  soxr.cmake  xsimd.cmake
cmake/libsamplerate/: CMakeLists.txt
extras/: aarch64-rpi3B-Toolchain.cmake  clangd_arm_neon.h  install_aarch64_gnu_toolchain.sh  x86_64-Toolchain.cmake  x86_64-clang-Toolchain.cmake
tests/: CMakeLists.txt  mipmap_transition_generator.cpp  oscillator_tests.cpp  sweep_generator.cpp  test_sweep.py  test_tones.py  tones_generator.cpp  waveform_data_tests.cpp  wavetable_data_tests.cpp
tests/benchmarks/: CMakeLists.txt  LICENSE  README.md  adwt_benchmark.cpp  adwt_profile.cpp  juce_benchmark.cpp  saw_2048.hpp  utils_benchmarks.cpp  utils_benchmarks.hpp
tests/benchmarks/source/: CMakeLists.txt  downsampler.hpp  downsampler_base.hpp  downsampler_juce.cpp  downsampler_juce.hpp  ovs_oscillator.cpp  ovs_oscillator.hpp
